--- a/_includes/legals.html
+++ b/_includes/legals.html
@@ -1,3 +1,9 @@
 <section id="legals">
-    Mentions légales TODO
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <p>Mentions légales TODO</p>
+            </div>
+        </div>
+    </div>
 </section>
