--- a/_includes/prices.html
+++ b/_includes/prices.html
@@ -1,3 +1,11 @@
 <section id="prices">
-    Tarifs TODO
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Tarifs</h2>
+                <hr class="primary">
+                <p>Tarifs TODO</p>
+            </div>
+        </div>
+    </div>
 </section>
