--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,12 +7,12 @@
                 <p>Vous êtes intéressés par nos services ? Appelez-nous ou envoyez un email et nous reviendrons vers vous rapidement.</p>
             </div>
             <div class="col-lg-3 col-lg-offset-3 text-center">
-                <i class="fa fa-phone fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <i class="fas fa-phone fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                 <p>{{ site.phone }}</p>
             </div>
             <div class="col-lg-3 col-lg-offset-1 text-center">
                 <a href="mailto:{{ site.email }}">
-                <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <i class="fas fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p>{{ site.email }}</p>
                 </a>
             </div>
