--- a/_includes/services.html
+++ b/_includes/services.html
@@ -11,28 +11,28 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-broom wow bounceIn text-primary"></i>
+                    <i class="fas fa-4x fa-broom wow bounceIn text-primary"></i>
                     <h3>Ménage</h3>
                     <p class="text-muted">Description Ménage TODO</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-mug-hot wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <i class="fas fa-4x fa-mug-hot wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Petit-déjeuner</h3>
                     <p class="text-muted">Description Petit-déjeuner TODO</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-spa wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <i class="fas fa-4x fa-spa wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Spa</h3>
                     <p class="text-muted">Sauna/Hammam</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-dumbbell wow bounceIn text-primary" data-wow-delay=".3s"></i>
+                    <i class="fas fa-4x fa-dumbbell wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Salle de sport</h3>
                     <p class="text-muted">Description Salle de sport TODO</p>
                 </div>
