--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,9 @@
-{% assign section = site.sections | find: "id", "header" %}
 <header>
     <div class="header-content">
         <div class="header-content-inner">
             <h1>{{ section.title }}</h1>
             <hr>
-            <p>{{ section.content | markdownify }}</p>
+            <p>{{ section.output }}</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">{{ section.CTA }}</a>
         </div>
     </div>
