--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+{% assign section = site.sections | find: "id", "header" %}
 <header>
     <div class="header-content">
         <div class="header-content-inner">
