--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-{% assign section = site.sections | find: "id", "header" %}
+{% assign section = site.sections|where:"sid","header"|first %}
 <header>
     <div class="header-content">
         <div class="header-content-inner">
