--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,10 +1,11 @@
+{% assign section = site.sections|where:"sid","about"|first %}
 <section class="bg-primary" id="about">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Présentation</h2>
+                <h2 class="section-heading">{{ section.title }}</h2>
                 <hr class="light">
-                <p class="text-faded">Texte Présentation TODO</p>
+                <p class="text-faded">{{ section.output }}</p>
             </div>
         </div>
     </div>
