--- a/_includes/booklet.html
+++ b/_includes/booklet.html
@@ -1,8 +1,9 @@
-  <aside class="bg-dark">
+{% assign section = site.sections|where:"sid","booklet"|first %}
+<aside class="bg-dark">
       <div class="container text-center">
           <div class="call-to-action">
-              <h2>Vous voulez en savoir plus ?</h2>
-              <a href="#" class="btn btn-default btn-xl wow tada">Télécharger la brochure</a>
+              <h2>{{ section.title }}</h2>
+              <a href="#" class="btn btn-default btn-xl wow tada">{{ section.CTA }}</a>
           </div>
       </div>
   </aside>
