--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,10 +1,11 @@
+{% assign section = site.sections|where:"sid","contact"|first %}
 <section id="contact">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Contactez-nous !</h2>
+                <h2 class="section-heading">{{ section.title }}</h2>
                 <hr class="primary">
-                <p>Vous êtes intéressés par nos services ? Appelez-nous ou envoyez un email et nous reviendrons vers vous rapidement.</p>
+                <p>{{ section.output }}</p>
             </div>
             <div class="col-lg-3 col-lg-offset-3 text-center">
                 <i class="fas fa-phone fa-3x wow bounceIn" data-wow-delay=".1s"></i>
