--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,12 +9,12 @@
             </div>
             <div class="col-lg-3 col-lg-offset-3 text-center">
                 <i class="fas fa-phone fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.data.data.phone }}</p>
+                <p>{{ site.data.global.phone }}</p>
             </div>
             <div class="col-lg-3 col-lg-offset-1 text-center">
                 <a href="mailto:{{ site.email }}">
                 <i class="far fa-envelope fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p>{{ site.data.data.email }}</p>
+                    <p>{{ site.data.global.email }}</p>
                 </a>
             </div>
         </div>
