--- a/_includes/services.html
+++ b/_includes/services.html
@@ -10,34 +10,15 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fas fa-4x {{ section.services.service1.icon }} wow bounceIn text-primary"></i>
-                    <h3>{{ section.services.service1.title }}</h3>
-                    <p class="text-muted">{{ section.services.service1.description }}</p>
+            {% for service in site.data.services.services %}
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fas fa-4x {{ service.icon }} wow bounceIn text-primary" data-wow-delay="{{ service.delay }}"></i>
+                        <h3>{{ service.title }}</h3>
+                        <p class="text-muted">{{ service.description }}</p>
+                    </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fas fa-4x {{ section.services.service2.icon }} wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>{{ section.services.service2.title }}</h3>
-                    <p class="text-muted">{{ section.services.service2.description }}</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fas fa-4x {{ section.services.service3.icon }} wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>{{ section.services.service3.title }}</h3>
-                    <p class="text-muted">{{ section.services.service3.description }}</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fas fa-4x {{ section.services.service4.icon }} wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>{{ section.services.service4.title }}</h3>
-                    <p class="text-muted">{{ section.services.service4.description }}</p>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </section>
