--- a/_includes/tenant_nav.html
+++ b/_includes/tenant_nav.html
@@ -15,19 +15,8 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#about">Présentation</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#services">Services</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#prices">Tarifs</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
-                </li>
-                <li>
-                    <a class="btn btn-primary" href="/tenant/">Résident</a>
+                    <a href="/shop/">Achat de Services</a>
+                    <a href="/spa/">Réservation SPA</a>
                 </li>
             </ul>
         </div>
