--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,7 +27,7 @@
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a class="btn btn-primary" href="/tenant/">Résident</a>
+                    <a class="btn btn-outline-primary btn-sm" href="/tenant/">Résident</a>
                 </li>
             </ul>
         </div>
