Better tenant zone

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,6 +8,15 @@ body {
     @include serif-font;
 }
 
+#tenant-body{
+    background: #6a8f91;
+    height: 100%;
+
+    .navbar{
+        margin-bottom: 0;
+    }
+}
+
 hr {
     border-color: $theme-primary;
     border-width: 3px;
@@ -223,7 +232,15 @@ header {
     p {
         margin-bottom: 0;
     }
+
+    &.tenant{
+        background: #e6eced;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
 }
+
+
 
 .portfolio-box {
     position: relative;
