--- a/_includes/tenant_nav.html
+++ b/_includes/tenant_nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">{{ site.title }} - Résident</a>
+            <a class="navbar-brand" href="/tenant/">{{ site.title }} - Résident</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
