--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,7 +27,7 @@
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a class="text-primary" href="/tenant/">Espace résident</a>
+                    <a class="btn btn-primary" id="tenantZone" href="/tenant/">Espace résident</a>
                 </li>
             </ul>
         </div>
