--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,6 +17,14 @@ body {
     }
 }
 
+#tenantZone{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 5px;
+    margin-right: 5px;
+    color: rgba(255,255,255,0.7);
+}
+
 hr {
     border-color: $theme-primary;
     border-width: 3px;
