Better tenant zone

--- a/_includes/tenant_nav.html
+++ b/_includes/tenant_nav.html
@@ -15,7 +15,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="/shop/">Achat de Services</a>
+                    <a href="/store/">Achat de Services</a>
+                </li>
+                <li>
                     <a href="/spa/">Réservation SPA</a>
                 </li>
             </ul>
