--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -25,6 +25,14 @@ body {
     color: rgba(255,255,255,0.7);
 }
 
+#tenantHome{
+    margin-top: 40px;
+}
+
+#tenantStore{
+    margin-top: 40px;
+}
+
 hr {
     border-color: $theme-primary;
     border-width: 3px;
