--- a/_includes/photos.html
+++ b/_includes/photos.html
@@ -2,22 +2,22 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <img src="img/portfolio/1.png" class="img-responsive" alt="">
+                <img src="img/1.png" class="img-responsive" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img src="img/portfolio/2.png" class="img-responsive" alt="">
+                <img src="img/2.png" class="img-responsive" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img src="img/portfolio/3.png" class="img-responsive" alt="">
+                <img src="img/3.png" class="img-responsive" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img src="img/portfolio/4.png" class="img-responsive" alt="">
+                <img src="img/4.png" class="img-responsive" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img src="img/portfolio/5.png" class="img-responsive" alt="">
+                <img src="img/5.png" class="img-responsive" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img src="img/portfolio/6.png" class="img-responsive" alt="">
+                <img src="img/6.png" class="img-responsive" alt="">
             </div>
         </div>
     </div>
