From 74 Mademoiselle to Résidence Ella

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>{{ section.title }}</h1>
-            <hr>
-            <p>{{ section.output }}</p>
+            <h1>RESIDENC<span class='ella'>Ella</span></h1>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">{{ section.CTA }}</a>
         </div>
     </div>
