--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: "Kunstler Script";
+	src: url("../fonts/kunstler.ttf");
+}
+
 html,
 body {
     height: 100%;
@@ -6,6 +11,16 @@ body {
 
 body {
     @include serif-font;
+}
+
+.ella{
+    font-family: "Kunstler Script", serif;
+    font-size: 175%;
+    transform: rotate(-15deg);
+    display: inline-block;
+    position: relative;
+    left: -20px;
+    bottom: -35px;
 }
 
 .portfolio-image{
@@ -193,7 +208,7 @@ header {
         padding: 100px 15px 100px;
         width: 100%;
         .header-content-inner {
-            background-color: rgba(256,256,256, .7);
+            background-color: rgba(7, 68, 71, 0.7);
             padding: 2em;
 
             h1 {
