--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>RESIDENC<span class='ella'>Ella</span></h1>
+            <h1>RESIDEN<span class='ella'>Ella</span></h1>
         </div>
     </div>
 </header>
