--- a/_includes/booklet.html
+++ b/_includes/booklet.html
@@ -3,7 +3,7 @@
       <div class="container text-center">
           <div class="call-to-action">
               <h2>{{ section.title }}</h2>
-              <a href="img/booklet.pdf" target="_blank" class="btn btn-default btn-xl wow tada">{{ section.CTA }}</a>
+              <a href="img/booklet220401.pdf" target="_blank" class="btn btn-default btn-xl wow tada">{{ section.CTA }}</a>
           </div>
       </div>
   </aside>
