Refactor for comeeting

--- a/_includes/comeeting/about.html
+++ b/_includes/comeeting/about.html
@@ -1,11 +1,10 @@
-{% assign section = site.sections|where:"sid","about"|first %}
 <section class="bg-primary" id="about">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">{{ section.title }}</h2>
+                <h2 class="section-heading">Présentation</h2>
                 <hr class="light">
-                <p class="text-faded">{{ section.output }}</p>
+                <p class="text-faded">TODO</p>
             </div>
         </div>
     </div>
