--- a/_includes/legals.html
+++ b/_includes/legals.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <p>{{ section.output }}</p>
+                <p>Clara, SAS au capital de 2 000 000,39€ - RCS EVRY 348 762 428 - TVA FR 94 348 762 428 - 40 rue du Village, 91530 Le-Val-Saint-Germain</p>
             </div>
         </div>
     </div>
