--- a/_includes/comeeting/prices.html
+++ b/_includes/comeeting/prices.html
@@ -1,11 +1,12 @@
-{% assign section = site.sections|where:"sid","prices"|first %}
 <section id="prices">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">{{ section.title }}</h2>
+                <h2 class="section-heading">Tarifs</h2>
                 <hr class="primary">
-                <p>{{ section.output }}</p>
+                <p>
+                    TODO
+                </p>
             </div>
         </div>
     </div>
