--- a/_includes/comeeting/services.html
+++ b/_includes/comeeting/services.html
@@ -1,9 +1,8 @@
-{% assign section = site.sections|where:"sid","services"|first %}
 <section id="services">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">{{ section.title }}</h2>
+                <h2 class="section-heading">Nos services</h2>
                 <hr class="primary">
             </div>
         </div>
