--- a/_includes/comeeting/photos.html
+++ b/_includes/comeeting/photos.html
@@ -2,31 +2,31 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <img src="img/comeeting/1.png" class="img-responsive portfolio-image" alt="">
+                <img src="/img/comeeting/1.png" class="img-responsive portfolio-image" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img src="img/comeeting/2.png" class="img-responsive portfolio-image" alt="">
+                <img src="/img/comeeting/2.png" class="img-responsive portfolio-image" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img src="img/comeeting/3.png" class="img-responsive portfolio-image" alt="">
+                <img src="/img/comeeting/3.png" class="img-responsive portfolio-image" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img src="img/comeeting/4.png" class="img-responsive portfolio-image" alt="">
+                <img src="/img/comeeting/4.png" class="img-responsive portfolio-image" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img src="img/comeeting/5.png" class="img-responsive portfolio-image" alt="">
+                <img src="/img/comeeting/5.png" class="img-responsive portfolio-image" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img src="img/comeeting/6.png" class="img-responsive portfolio-image" alt="">
+                <img src="/img/comeeting/6.png" class="img-responsive portfolio-image" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img src="img/comeeting/7.png" class="img-responsive portfolio-image" alt="">
+                <img src="/img/comeeting/7.png" class="img-responsive portfolio-image" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img src="img/comeeting/8.png" class="img-responsive portfolio-image" alt="">
+                <img src="/img/comeeting/8.png" class="img-responsive portfolio-image" alt="">
             </div>
             <div class="col-lg-4 col-sm-6">
-                <img src="img/comeeting/9.png" class="img-responsive portfolio-image" alt="">
+                <img src="/img/comeeting/9.png" class="img-responsive portfolio-image" alt="">
             </div>
         </div>
     </div>
