--- a/_includes/comeeting/prices.html
+++ b/_includes/comeeting/prices.html
@@ -4,9 +4,32 @@
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Tarifs</h2>
                 <hr class="primary">
-                <p>
-                    TODO
-                </p>
+                <div>
+                    <table class="table-bordered">
+                        <tr>
+                            <th colspan="2">Tout compris</th>
+                        </tr>
+                        <tr>
+                            <td>Demi-journée</td>
+                            <td>Dès 20€ HT/personne</td>
+                        </tr>
+                        <tr>
+                            <td>Journée complète</td>
+                            <td>Dès 40€ HT/personne</td>
+                        </tr>
+                        <tr>
+                            <th colspan="2">Location seule</th>
+                        </tr>
+                        <tr>
+                            <td>Demi-journée</td>
+                            <td>Dès 400€ HT/personne</td>
+                        </tr>
+                        <tr>
+                            <td>Journée complète</td>
+                            <td>Dès 600€ HT/personne</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
