--- a/_includes/comeeting/about.html
+++ b/_includes/comeeting/about.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Présentation</h2>
                 <hr class="light">
-                <p class="text-faded">TODO</p>
+                <p class="text-faded">Un nouveau lieu de 90 m2 dédié à vos évènements professionnels ouvre ses portes au 74 rue Mademoiselle. Le CoMeeting de la Résidence Ella dispose d'une cuisine moderne, ouverte et équipée, de mobiliers entièrement modulables, ainsi que de tout l'équipement nécessaire pour accueillir vos évènements. </p>
             </div>
         </div>
     </div>
