--- a/_includes/comeeting/photos.html
+++ b/_includes/comeeting/photos.html
@@ -1,5 +1,5 @@
 <section class="no-padding">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <img src="/img/comeeting/1.png" class="img-responsive portfolio-image" alt="">
