--- a/_includes/comeeting/prices.html
+++ b/_includes/comeeting/prices.html
@@ -5,7 +5,7 @@
                 <h2 class="section-heading">Tarifs</h2>
                 <hr class="primary">
                 <div>
-                    <table class="table-bordered">
+                    <table class="table table-bordered">
                         <tr>
                             <th colspan="2">Tout compris</th>
                         </tr>
