--- a/_includes/comeeting/prices.html
+++ b/_includes/comeeting/prices.html
@@ -4,32 +4,30 @@
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Tarifs</h2>
                 <hr class="primary">
-                <div>
-                    <table class="table table-bordered">
-                        <tr>
-                            <th colspan="2">Tout compris</th>
-                        </tr>
-                        <tr>
-                            <td>Demi-journée</td>
-                            <td>Dès 20€ HT/personne</td>
-                        </tr>
-                        <tr>
-                            <td>Journée complète</td>
-                            <td>Dès 40€ HT/personne</td>
-                        </tr>
-                        <tr>
-                            <th colspan="2">Location seule</th>
-                        </tr>
-                        <tr>
-                            <td>Demi-journée</td>
-                            <td>Dès 400€ HT/personne</td>
-                        </tr>
-                        <tr>
-                            <td>Journée complète</td>
-                            <td>Dès 600€ HT/personne</td>
-                        </tr>
-                    </table>
-                </div>
+                <table class="table table-bordered" style="max-width: 500px;">
+                    <tr>
+                        <th colspan="2" class="text-center">Tout compris</th>
+                    </tr>
+                    <tr>
+                        <td>Demi-journée</td>
+                        <td>Dès 20€ HT/personne</td>
+                    </tr>
+                    <tr>
+                        <td>Journée complète</td>
+                        <td>Dès 40€ HT/personne</td>
+                    </tr>
+                    <tr>
+                        <th colspan="2" class="text-center">Location seule</th>
+                    </tr>
+                    <tr>
+                        <td>Demi-journée</td>
+                        <td>Dès 400€ HT/personne</td>
+                    </tr>
+                    <tr>
+                        <td>Journée complète</td>
+                        <td>Dès 600€ HT/personne</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
