--- a/_includes/comeeting/prices.html
+++ b/_includes/comeeting/prices.html
@@ -1,10 +1,10 @@
-<section id="prices">
+<section id="prices" class="bg-dark">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Tarifs</h2>
                 <hr class="primary">
-                <table class="table table-bordered" style="max-width: 500px;">
+                <table class="table table-bordered" style="max-width: 500px; margin: auto;">
                     <tr>
                         <th colspan="2" class="text-center">Tout compris</th>
                     </tr>
