--- a/_includes/comeeting/header.html
+++ b/_includes/comeeting/header.html
@@ -1,4 +1,4 @@
-<header>
+<header id="comeeting-header">
     <div class="header-content">
         <div class="header-content-inner">
             <h1>Comeeting RESIDEN<span class='ella'>Ella</span></h1>
