--- a/_includes/landing/header.html
+++ b/_includes/landing/header.html
@@ -1,4 +1,4 @@
-<header>
+<header id="landing-header">
     <div class="header-content">
         <div class="header-content-inner">
             <h1>RESIDEN<span class='ella'>Ella</span></h1>
