Services & better presentation

--- a/_includes/comeeting/about.html
+++ b/_includes/comeeting/about.html
@@ -5,6 +5,7 @@
                 <h2 class="section-heading">Présentation</h2>
                 <hr class="light">
                 <p class="text-faded">Un nouveau lieu de 90 m2 dédié à vos évènements professionnels ouvre ses portes au 74 rue Mademoiselle. Le CoMeeting de la Résidence Ella dispose d'une cuisine moderne, ouverte et équipée, de mobiliers entièrement modulables, ainsi que de tout l'équipement nécessaire pour accueillir vos évènements. </p>
+                <p class="text-faded">La Résidence Ella se situe au 74 rue Mademoiselle, Paris 15, près des stations de métro M06 (Cambronne) M12 (Vaugirard)et des bus (39), (70) et (88)</p>
             </div>
         </div>
     </div>
