--- a/_includes/comeeting/prices.html
+++ b/_includes/comeeting/prices.html
@@ -21,11 +21,11 @@
                     </tr>
                     <tr>
                         <td>Demi-journée</td>
-                        <td>Dès 400€ HT/personne</td>
+                        <td>Dès 400€ HT</td>
                     </tr>
                     <tr>
                         <td>Journée complète</td>
-                        <td>Dès 600€ HT/personne</td>
+                        <td>Dès 600€ HT</td>
                     </tr>
                 </table>
             </div>
