--- a/_includes/comeeting/services.html
+++ b/_includes/comeeting/services.html
@@ -9,8 +9,8 @@
     </div>
     <div class="container">
         <div class="row">
-            {% for service in site.data.services.services %}
-                <div class="col-lg-3 col-md-6 text-center">
+            {% for service in site.data.services.comeeting_services %}
+                <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fas fa-4x {{ service.icon }} wow bounceIn text-primary" data-wow-delay="{{ service.delay }}"></i>
                         <h3>{{ service.title }}</h3>
