--- a/_includes/comeeting/capacity.html
+++ b/_includes/comeeting/capacity.html
@@ -1,20 +1,20 @@
-<section id="services">
+<section id="capacity">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Nos services</h2>
+                <h2 class="section-heading">Capacités de la salle</h2>
                 <hr class="primary">
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            {% for service in site.data.services.comeeting_services %}
+            {% for capacity in site.data.comeeting_services.capacities %}
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fas fa-4x {{ service.icon }} wow bounceIn text-primary" data-wow-delay="{{ service.delay }}"></i>
-                        <h3>{{ service.title }}</h3>
-                        <p class="text-muted">{{ service.description }}</p>
+                        <i class="fas fa-4x {{ capacity.icon }} text-primary"></i>
+                        <h3>{{ capacity.title }}</h3>
+                        <p class="text-muted">{{ capacity.attendee }}</p>
                     </div>
                 </div>
             {% endfor %}
