--- a/_includes/comeeting/capacity.html
+++ b/_includes/comeeting/capacity.html
@@ -10,11 +10,11 @@
     <div class="container">
         <div class="row">
             {% for capacity in site.data.comeeting_services.capacities %}
-                <div class="col-lg-4 col-md-6 text-center">
+                <div class="col-lg-2 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fas fa-4x {{ capacity.icon }} text-primary"></i>
+                        <img src="/img/comeeting/capacity/{{ capacity.image }}.svg" class="img-responsive">
                         <h3>{{ capacity.title }}</h3>
-                        <p class="text-muted">{{ capacity.attendee }}</p>
+                        <h4>{{ capacity.attendee }}</h4>
                     </div>
                 </div>
             {% endfor %}
