--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -55,6 +55,10 @@ body {
     margin-top: 40px;
 }
 
+#capacity{
+    padding-bottom: 0;
+}
+
 hr {
     border-color: $theme-primary;
     border-width: 3px;
