--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,7 +8,7 @@
             </div>
             <div class="col-lg-3 col-lg-offset-3 text-center">
                 <i class="fas fa-phone fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.data.global.phone }}</p>
+                <p>{{ include.phone }}</p>
             </div>
             <div class="col-lg-3 col-lg-offset-1 text-center">
                 <a href="mailto:{{ site.email }}">
