Add booklet & add catering prices

--- a/_includes/comeeting/prices.html
+++ b/_includes/comeeting/prices.html
@@ -27,6 +27,21 @@
                         <td>Journée complète</td>
                         <td>Dès 600€ HT</td>
                     </tr>
+                    <tr>
+                        <th colspan="2" class="text-center">Traiteur de qualité</th>
+                    </tr>
+                    <tr>
+                        <td>Repas</td>
+                        <td>30€ HT/personne</td>
+                    </tr>
+                    <tr>
+                        <td>Petit-déjeuner</td>
+                        <td>10€ HT/personne</td>
+                    </tr>
+                    <tr>
+                        <td>Collation</td>
+                        <td>5€ HT/personne</td>
+                    </tr>
                 </table>
             </div>
         </div>
