Absolute path to /img instead of relative

--- a/_includes/landing/booklet.html
+++ b/_includes/landing/booklet.html
@@ -2,7 +2,7 @@
       <div class="container text-center">
           <div class="call-to-action">
               <h2>Vous voulez en savoir plus ?</h2>
-              <a href="img/booklet220401.pdf" target="_blank" class="btn btn-default btn-xl wow tada">Télécharger la brochure</a>
+              <a href="/img/booklet220401.pdf" target="_blank" class="btn btn-default btn-xl wow tada">Télécharger la brochure</a>
           </div>
       </div>
   </aside>
