--- a/_includes/comeeting/prices.html
+++ b/_includes/comeeting/prices.html
@@ -28,7 +28,7 @@
                         <td>Dès 600€ HT</td>
                     </tr>
                     <tr>
-                        <th colspan="2" class="text-center">Traiteur de qualité</th>
+                        <th colspan="2" class="text-center">Service traiteur optionnel</th>
                     </tr>
                     <tr>
                         <td>Repas</td>
