--- a/_includes/comeeting/nav.html
+++ b/_includes/comeeting/nav.html
@@ -21,6 +21,9 @@
                     <a class="page-scroll" href="#services">Services</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#reviews">Avis</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#prices">Tarifs</a>
                 </li>
                 <li>
