Move reviews after prices

--- a/_includes/comeeting/reviews.html
+++ b/_includes/comeeting/reviews.html
@@ -1,4 +1,4 @@
-<section id="reviews" class="bg-dark">
+<section id="reviews">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -7,10 +7,8 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <script src="https://static.elfsight.com/platform/platform.js" async></script>
-            <div class="elfsight-app-63edfe18-e7ec-4bab-89fd-40951b782838" data-elfsight-app-lazy></div>
-        </div>
+    <div>
+        <script src="https://static.elfsight.com/platform/platform.js" async></script>
+        <div class="elfsight-app-63edfe18-e7ec-4bab-89fd-40951b782838" data-elfsight-app-lazy></div>
     </div>
 </section>
