--- a/_includes/comeeting/prices.html
+++ b/_includes/comeeting/prices.html
@@ -1,4 +1,4 @@
-<aside id="prices">
+<aside id="prices" class="bg-dark">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
