Add navlink to comeeting calendar

--- a/_includes/comeeting/nav.html
+++ b/_includes/comeeting/nav.html
@@ -8,26 +8,29 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Comeeting Résidence Ella</a>
+            <a class="navbar-brand page-scroll" href="/comeeting#page-top">Comeeting Résidence Ella</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#about">Présentation</a>
+                    <a class="page-scroll" href="/comeeting#about">Présentation</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#reviews">Avis</a>
+                    <a class="page-scroll" href="/comeeting#reviews">Avis</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="/comeeting#services">Services</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#prices">Tarifs</a>
+                    <a class="page-scroll" href="/comeeting#prices">Tarifs</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="/comeeting#contact">Contact</a>
+                </li>
+                <li>
+                    <a class="btn btn-primary" href="/comeeting_calendar/">Disponibilités</a>
                 </li>
             </ul>
         </div>
