Add comeeting calendar

--- a/_includes/comeeting/nav.html
+++ b/_includes/comeeting/nav.html
@@ -30,7 +30,7 @@
                     <a class="page-scroll" href="/comeeting#contact">Contact</a>
                 </li>
                 <li>
-                    <a class="btn btn-primary" href="/comeeting_calendar/">Disponibilités</a>
+                    <a class="btn btn-primary navlink-primary" href="/comeeting_calendar/">Disponibilités</a>
                 </li>
             </ul>
         </div>
